adaptive images, fixed mobile background positioning on safari

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -24,10 +24,9 @@ body {
 }
 
 .banner {
-	background: url("https://ununsplash.imgix.net/uploads/14115120538776712c565/a699942a?q=75&fm=jpg&s=5379239231f09deb4570e043e0bec939") no-repeat center center fixed;
+	background: transparent url("../img/bg2.jpg") no-repeat center center;
 	width: 100vw;
-	border: 0;
-	height: 36em;
+	height: 32em;
 	position: absolute;
 	background-size: cover;
 	webkit-background-size: cover;
@@ -45,7 +44,7 @@ body {
 	display: none;
 }
 
-.row-container {
+.table-container {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 30em;
